# markdown-core

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .prettierignore  .swift-format  .swiftlint.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  Package.swift  README.md  UPSTREAM.md  build.gradle.kts  eslint.config.js  gradle.properties  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  settings.gradle.kts
docs/: development-environment.md  releasing.md  repository-setup-template.md  toolchains.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml  verification-keyring.keys  verification-metadata.xml
samples/: README.md
scripts/: audit-ci-policy.sh  audit-maven-publications.mjs  audit-package-contents.sh  audit-public-surface.sh  audit-repository.sh  audit-test-topology.sh  build-c-product-artifact.sh  build-c-test-artifact.sh  build-es-product-artifact.sh  build-es-test-artifact.sh  build-kotlin-android-test-artifact.sh  build-kotlin-host-test-artifact.sh  build-kotlin-product-artifact.sh  build-swift-deployment.sh  build-swift-product-artifact.sh  build-swift-test-artifact.sh  central-portal.sh  check-canonical-ast-fixtures.mjs  check-kotlin-consumers.sh  check-release-quality-gates.mjs  check-release-version.mjs  check-swift-source-archive.sh  collect-pr-metrics.mjs  create-release-checksums.sh  format-c.sh  format-cmake.sh  format-swift.sh  generate-canonical-ast-candidates.sh  gradle-model-smoke.sh  gradle.sh  init-environment.sh  install-swiftlint.sh  lint-c.sh  lint-swift.sh  (+14 more)
(+65 files in other folders)
