cmake_minimum_required(VERSION 3.20)
file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION" MARKDOWN_CORE_VERSION LIMIT_COUNT 1)
if(NOT MARKDOWN_CORE_VERSION MATCHES "^[0-9]+\\.[0-9]+\\.[0-9]+$")
    message(FATAL_ERROR "VERSION must contain a stable semantic version")
endif()
project(markdown-core VERSION "${MARKDOWN_CORE_VERSION}")

enable_testing()
add_subdirectory(packages/markdown-core)
if(MARKDOWN_CORE_KOTLIN_JNI OR MARKDOWN_CORE_KOTLIN_NATIVE)
    add_subdirectory(packages/kotlin-markdown-core/src/native)
endif()
